# Facial-Motion-Capture-Helmet

./: Collecting feature points.cpp  Facial expression recognition.cpp  README.md  SVM_DATA.xml  Training.cpp  表情识别.cpp
Expression recognition training module/: Collecting feature points.cpp  Training.cpp
FaceCapture/: CMakeLists.txt  Makefile  headfile.h  light.cpp  main.cpp
FaceCapture/old/: main.cpp
Hardware design(solidworks)/: Base plate model.SLDPRT  Base plate model.STL  Circuit board models.SLDPRT  Circuit board models.STL  Overall model.SLDPRT
facecapture_test/: CMakeLists.txt  SVM_DATA.xml  camera.cpp  headfile.h  light.cpp  main.cpp
facecapture_unit_test/: CMakeLists.txt
facecapture_unit_test/src/: camera.cpp  headfile.h  light.cpp  main.cpp
facecapture_unit_test/test/: CMakeLists.txt  test.cpp
light/rpi_ws281x_3/: main.cpp  test  ws2812_example
test/: CMakeLists.txt  test.cpp
